<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EDF2"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/top_banner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_search_view"
            android:iconifiedByDefault="false"
            android:padding="5dp"
            android:queryHint="Search..." />
        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_search_view"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/filter_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:src="@drawable/thebetterfilter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FILTER"
                android:textStyle="bold"
                android:textSize="10dp"
                android:textColor="#000000"
                android:layout_marginStart="2dp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/filter_bar_fragment_container"
        android:name="com.example.canada_geese.Fragments.FilterBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_banner"
        tools:layout="@layout/fragment_filter_bar"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_banner" />


</androidx.constraintlayout.widget.ConstraintLayout>
