<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page1"
        android:color="#FFF78C"
        android:icon="@drawable/ic_home_selector"/>
    <item
        android:id="@+id/page2"
        android:icon="@drawable/ic_friends_selector"/>
    <item
        android:id="@+id/page3"
        android:icon="@drawable/ic_add_selector"/>
    <item
        android:id="@+id/page4"
        android:icon="@drawable/ic_map_selector"/>
    <item
        android:id="@+id/page5"
        android:icon="@drawable/ic_profile_selector"/>
</menu>