...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/comment_button2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="Add a comment"
            android:maxWidth="5dp"
            android:maxHeight="5dp"
...
